# PSP2-batteryFixer

./: CMakeLists.txt  README.md  bicr.yml  main.c
app/: main.c
kernel/: blit.c  exports.yml  main.c
payload/final/: Makefile  linker.ld
payload/final/include/: gpio.h  libc.h  pervasive.h  spi.h  syscon.h  utils.h
payload/final/src/: gpio.c  libc.c  main.c  pervasive.c  spi.c  start.s  syscon.c  utils.c
payload/pre/: Makefile  payload_bootstrap.S
plugin/: blit.c  config.h  exports.yml  main.c  resume.S  sysroot.h
